--- a/pern/frontend/src/components/todo-add/AddTodo.css
+++ b/pern/frontend/src/components/todo-add/AddTodo.css
@@ -2,17 +2,19 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 10;
 }
 .add-form input {
     width: 48%;
     height: 40px;
     margin-bottom: 1em;
-    border: 0;
-    box-shadow: 0px 2px 0px rgba(0,0,0, 0.2);
-    border-radius: 5px;
     padding-left: 1em;
 }
 .add-form button {
-    
+    width: 18%;
+    height: 40px;
+}
+.add-form input, .add-form button {
+    box-shadow: 0px 2px 0px rgba(0,0,0, 0.2);
+    border-radius: 5px;
+    border: 0;
 }
